test/Fail/Issue2044.err
Issue2044.agda:8.7-8: error: [InstanceNoCandidate]
No instance of type C was found in scope.
when checking that the expression d has type T
